--- a/SummonUndead.ipynb
+++ b/SummonUndead.ipynb
@@ -5,7 +5,13 @@
    "metadata": {},
    "source": [
     "# SummonUndead\n",
-    "### raise armies of gibbering horrors, the easy way"
+    "### raise armies of gibbering horrors, the easy way\n",
+    "\n",
+    "Sometimes, when you're up in your Tower of Necromancy working on evil plot,\n",
+    "raising and leading armies of undead horrors on relatively small missions \n",
+    "can be a real drag on your productivity. `SummonUndead` takes the hassle out \n",
+    "of work-a-day necromantic battle magic, leaving you more time to focus on\n",
+    "training mid-tier bosses, dungeon management, and other big-picture problems."
    ]
   },
   {
@@ -250,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -271,8 +277,6 @@
    ],
    "source": [
     "import pickle\n",
-    "\n",
-    "scratchpath = '/global/projectb/scratch/ryneches/undead'\n",
     "\n",
     "for p in baz_output :\n",
     "    print( pickle.load( open( p['output_pickle'], 'rb' ) ) )\n",
