batch submission (closes issue #2)

--- a/SummonUndead.ipynb
+++ b/SummonUndead.ipynb
@@ -7,11 +7,12 @@
     "# SummonUndead\n",
     "### raise armies of gibbering horrors, the easy way\n",
     "\n",
-    "Sometimes, when you're up in your Tower of Necromancy working on evil plot,\n",
+    "Sometimes, when you're up in your Tower of Necromancy working on some evil,\n",
     "raising and leading armies of undead horrors on relatively small missions \n",
     "can be a real drag on your productivity. `SummonUndead` takes the hassle out \n",
     "of work-a-day necromantic battle magic, leaving you more time to focus on\n",
-    "training mid-tier bosses, dungeon management, and other big-picture problems."
+    "mentoring your mid-tier bosses, dungeon management, and other big-picture\n",
+    "problems."
    ]
   },
   {
@@ -76,7 +77,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "891bc6b1de634f35b7b25f9f01d2ed69",
+       "model_id": "ab16961e854d483fa61ccc306ad22a84",
        "version_major": 2,
        "version_minor": 0
       },
@@ -113,15 +114,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'y': 100, 'index': 0, 'pid': 9100},\n",
-       " {'y': 121, 'index': 1, 'pid': 9103},\n",
-       " {'y': 529, 'index': 2, 'pid': 9104},\n",
-       " {'y': 1156, 'index': 3, 'pid': 9105},\n",
-       " {'y': 169, 'index': 4, 'pid': 9106},\n",
-       " {'y': 3025, 'index': 5, 'pid': 9107},\n",
-       " {'y': 5329, 'index': 6, 'pid': 9108},\n",
-       " {'y': 441, 'index': 7, 'pid': 9109},\n",
-       " {'y': 324, 'index': 8, 'pid': 9110}]"
+       "[{'y': 100, 'index': 0, 'pid': 17668},\n",
+       " {'y': 121, 'index': 1, 'pid': 17669},\n",
+       " {'y': 529, 'index': 2, 'pid': 17670},\n",
+       " {'y': 1156, 'index': 3, 'pid': 17672},\n",
+       " {'y': 169, 'index': 4, 'pid': 17673},\n",
+       " {'y': 3025, 'index': 5, 'pid': 17674},\n",
+       " {'y': 5329, 'index': 6, 'pid': 17675},\n",
+       " {'y': 441, 'index': 7, 'pid': 17676},\n",
+       " {'y': 324, 'index': 8, 'pid': 17677}]"
       ]
      },
      "execution_count": 5,
@@ -150,7 +151,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa33c12d1b4641bbbd5c2b30ff34eb28",
+       "model_id": "3a450ac7b4e54708b561cc0653048d67",
        "version_major": 2,
        "version_minor": 0
       },
@@ -187,15 +188,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'y': 100, 'index': 0, 'pid': 9460},\n",
-       " {'y': 121, 'index': 1, 'pid': 9461},\n",
-       " {'y': 529, 'index': 2, 'pid': 9462},\n",
-       " {'y': 1156, 'index': 3, 'pid': 9463},\n",
-       " {'y': 169, 'index': 4, 'pid': 9464},\n",
-       " {'y': 3025, 'index': 5, 'pid': 9465},\n",
-       " {'y': 5329, 'index': 6, 'pid': 9466},\n",
-       " {'y': 441, 'index': 7, 'pid': 9467},\n",
-       " {'y': 324, 'index': 8, 'pid': 9469}]"
+       "[{'y': 100, 'index': 0, 'pid': 18019},\n",
+       " {'y': 121, 'index': 1, 'pid': 18020},\n",
+       " {'y': 529, 'index': 2, 'pid': 18021},\n",
+       " {'y': 1156, 'index': 3, 'pid': 18022},\n",
+       " {'y': 169, 'index': 4, 'pid': 18024},\n",
+       " {'y': 3025, 'index': 5, 'pid': 18025},\n",
+       " {'y': 5329, 'index': 6, 'pid': 18026},\n",
+       " {'y': 441, 'index': 7, 'pid': 18027},\n",
+       " {'y': 324, 'index': 8, 'pid': 18028}]"
       ]
      },
      "execution_count": 7,
@@ -225,15 +226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "job id 21358605 submitted\n",
-      "job id 21358606 submitted\n",
-      "job id 21358607 submitted\n",
-      "job id 21358608 submitted\n",
-      "job id 21358609 submitted\n",
-      "job id 21358610 submitted\n",
-      "job id 21358611 submitted\n",
-      "job id 21358612 submitted\n",
-      "job id 21358613 submitted\n"
+      "job id 21378735 submitted\n"
      ]
     }
    ],
@@ -256,22 +249,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'y': 100, 'index': 0, 'pid': 18034}\n",
-      "{'y': 121, 'index': 1, 'pid': 18025}\n",
-      "{'y': 529, 'index': 2, 'pid': 18024}\n",
-      "{'y': 1156, 'index': 3, 'pid': 18033}\n",
-      "{'y': 169, 'index': 4, 'pid': 18053}\n",
-      "{'y': 3025, 'index': 5, 'pid': 18026}\n",
-      "{'y': 5329, 'index': 6, 'pid': 18050}\n",
-      "{'y': 441, 'index': 7, 'pid': 18055}\n",
-      "{'y': 324, 'index': 8, 'pid': 18045}\n"
+      "{'y': 100, 'index': 0, 'pid': 2191}\n",
+      "{'y': 121, 'index': 1, 'pid': 2219}\n",
+      "{'y': 529, 'index': 2, 'pid': 2244}\n",
+      "{'y': 1156, 'index': 3, 'pid': 2269}\n",
+      "{'y': 169, 'index': 4, 'pid': 2294}\n",
+      "{'y': 3025, 'index': 5, 'pid': 2320}\n",
+      "{'y': 5329, 'index': 6, 'pid': 2345}\n",
+      "{'y': 441, 'index': 7, 'pid': 2370}\n",
+      "{'y': 324, 'index': 8, 'pid': 2395}\n"
      ]
     }
    ],
