handle namespace when modules imported with 'as'

--- a/SummonUndead.ipynb
+++ b/SummonUndead.ipynb
@@ -71,13 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab16961e854d483fa61ccc306ad22a84",
+       "model_id": "e64a1daa973d4b7e8431951f06b7b05b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -114,15 +114,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'y': 100, 'index': 0, 'pid': 17668},\n",
-       " {'y': 121, 'index': 1, 'pid': 17669},\n",
-       " {'y': 529, 'index': 2, 'pid': 17670},\n",
-       " {'y': 1156, 'index': 3, 'pid': 17672},\n",
-       " {'y': 169, 'index': 4, 'pid': 17673},\n",
-       " {'y': 3025, 'index': 5, 'pid': 17674},\n",
-       " {'y': 5329, 'index': 6, 'pid': 17675},\n",
-       " {'y': 441, 'index': 7, 'pid': 17676},\n",
-       " {'y': 324, 'index': 8, 'pid': 17677}]"
+       "[{'y': 100, 'index': 0, 'pid': 20260},\n",
+       " {'y': 121, 'index': 1, 'pid': 20264},\n",
+       " {'y': 529, 'index': 2, 'pid': 20268},\n",
+       " {'y': 1156, 'index': 3, 'pid': 20272},\n",
+       " {'y': 169, 'index': 4, 'pid': 20276},\n",
+       " {'y': 3025, 'index': 5, 'pid': 20280},\n",
+       " {'y': 5329, 'index': 6, 'pid': 20284},\n",
+       " {'y': 441, 'index': 7, 'pid': 20288},\n",
+       " {'y': 324, 'index': 8, 'pid': 20292}]"
       ]
      },
      "execution_count": 5,
@@ -145,13 +145,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a450ac7b4e54708b561cc0653048d67",
+       "model_id": "0ce4395d106343a9b1288cb8b4cafae4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,24 +182,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'y': 100, 'index': 0, 'pid': 18019},\n",
-       " {'y': 121, 'index': 1, 'pid': 18020},\n",
-       " {'y': 529, 'index': 2, 'pid': 18021},\n",
-       " {'y': 1156, 'index': 3, 'pid': 18022},\n",
-       " {'y': 169, 'index': 4, 'pid': 18024},\n",
-       " {'y': 3025, 'index': 5, 'pid': 18025},\n",
-       " {'y': 5329, 'index': 6, 'pid': 18026},\n",
-       " {'y': 441, 'index': 7, 'pid': 18027},\n",
-       " {'y': 324, 'index': 8, 'pid': 18028}]"
+       "[{'y': 100, 'index': 0, 'pid': 20423},\n",
+       " {'y': 121, 'index': 1, 'pid': 20422},\n",
+       " {'y': 529, 'index': 2, 'pid': 20425},\n",
+       " {'y': 1156, 'index': 3, 'pid': 20426},\n",
+       " {'y': 169, 'index': 4, 'pid': 20427},\n",
+       " {'y': 3025, 'index': 5, 'pid': 20428},\n",
+       " {'y': 5329, 'index': 6, 'pid': 20430},\n",
+       " {'y': 441, 'index': 7, 'pid': 20429},\n",
+       " {'y': 324, 'index': 8, 'pid': 20431}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
