--- a/SummonUndead.ipynb
+++ b/SummonUndead.ipynb
@@ -5,14 +5,18 @@
    "metadata": {},
    "source": [
     "# SummonUndead\n",
-    "### raise armies of gibbering horrors, the easy way\n",
+    "### Raise armies of gibbering horrors, the easy way\n",
     "\n",
     "Sometimes, when you're up in your Tower of Necromancy working on some evil,\n",
     "raising and leading armies of undead horrors on relatively small missions \n",
     "can be a real drag on your productivity. `SummonUndead` takes the hassle out \n",
     "of work-a-day necromantic battle magic, leaving you more time to focus on\n",
     "mentoring your mid-tier bosses, dungeon management, and other big-picture\n",
-    "problems."
+    "problems.\n",
+    "\n",
+    "### Request for comments\n",
+    "\n",
+    "Should we use `--exclusive`?"
    ]
   },
   {
@@ -77,7 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fe682581d094bf6a1c7255bb3bf03a0",
+       "model_id": "594ded4862794f65a21dee4ed15166e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,7 +101,7 @@
     }
    ],
    "source": [
-    "%%moan --label foo -n 5 -i run_args -o y,index,pid --mode local_serial\n",
+    "%%moan --label foo -n 5 -i run_args -o x,y,index,pid --mode local_serial\n",
     "import os\n",
     "import time\n",
     "\n",
@@ -114,15 +118,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'y': 100, 'index': 0, 'pid': 20879},\n",
-       " {'y': 121, 'index': 1, 'pid': 20883},\n",
-       " {'y': 529, 'index': 2, 'pid': 20887},\n",
-       " {'y': 1156, 'index': 3, 'pid': 20891},\n",
-       " {'y': 169, 'index': 4, 'pid': 20895},\n",
-       " {'y': 3025, 'index': 5, 'pid': 20899},\n",
-       " {'y': 5329, 'index': 6, 'pid': 20903},\n",
-       " {'y': 441, 'index': 7, 'pid': 20907},\n",
-       " {'y': 324, 'index': 8, 'pid': 20911}]"
+       "[{'x': 10, 'y': 100, 'index': 0, 'pid': 9075},\n",
+       " {'x': 11, 'y': 121, 'index': 1, 'pid': 9076},\n",
+       " {'x': 23, 'y': 529, 'index': 2, 'pid': 9077},\n",
+       " {'x': 34, 'y': 1156, 'index': 3, 'pid': 9078},\n",
+       " {'x': 13, 'y': 169, 'index': 4, 'pid': 9079},\n",
+       " {'x': 55, 'y': 3025, 'index': 5, 'pid': 9080},\n",
+       " {'x': 73, 'y': 5329, 'index': 6, 'pid': 9082},\n",
+       " {'x': 21, 'y': 441, 'index': 7, 'pid': 9084},\n",
+       " {'x': 18, 'y': 324, 'index': 8, 'pid': 9467}]"
       ]
      },
      "execution_count": 5,
@@ -151,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "345370c290154fe994e0c7d31cf3a022",
+       "model_id": "ea1c765d926941d58370dd5c5acedd58",
        "version_major": 2,
        "version_minor": 0
       },
@@ -171,7 +175,7 @@
     }
    ],
    "source": [
-    "%%moan --label bar -n 4 -i run_args -o y,index,pid --mode local_parallel\n",
+    "%%moan --label bar -n 4 -i run_args -o x,y,index,pid --mode local_parallel\n",
     "import os\n",
     "import time\n",
     "\n",
@@ -182,24 +186,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'y': 100, 'index': 0, 'pid': 20423},\n",
-       " {'y': 121, 'index': 1, 'pid': 20422},\n",
-       " {'y': 529, 'index': 2, 'pid': 20425},\n",
-       " {'y': 1156, 'index': 3, 'pid': 20426},\n",
-       " {'y': 169, 'index': 4, 'pid': 20427},\n",
-       " {'y': 3025, 'index': 5, 'pid': 20428},\n",
-       " {'y': 5329, 'index': 6, 'pid': 20430},\n",
-       " {'y': 441, 'index': 7, 'pid': 20429},\n",
-       " {'y': 324, 'index': 8, 'pid': 20431}]"
+       "[{'x': 10, 'y': 100, 'index': 0, 'pid': 9514},\n",
+       " {'x': 11, 'y': 121, 'index': 1, 'pid': 9516},\n",
+       " {'x': 23, 'y': 529, 'index': 2, 'pid': 9515},\n",
+       " {'x': 34, 'y': 1156, 'index': 3, 'pid': 9517},\n",
+       " {'x': 13, 'y': 169, 'index': 4, 'pid': 9641},\n",
+       " {'x': 55, 'y': 3025, 'index': 5, 'pid': 9642},\n",
+       " {'x': 73, 'y': 5329, 'index': 6, 'pid': 9643},\n",
+       " {'x': 21, 'y': 441, 'index': 7, 'pid': 9646},\n",
+       " {'x': 18, 'y': 324, 'index': 8, 'pid': 9957}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,12 +230,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "job id 21378735 submitted\n"
+      "job submitted.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a45824d2aa51498a822e15b743050537",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=9), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "%%moan --label baz -n 4 -i run_args -o y,index,pid --mode slurm --scratch=/global/projectb/scratch/ryneches/undead\n",
+    "%%moan --label baz -n 4 -i run_args -o x,y,index,pid --mode slurm --scratch=/global/projectb/scratch/ryneches/undead\n",
     "import os\n",
     "import time\n",
     "\n",
@@ -249,40 +274,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'y': 100, 'index': 0, 'pid': 2191}\n",
-      "{'y': 121, 'index': 1, 'pid': 2219}\n",
-      "{'y': 529, 'index': 2, 'pid': 2244}\n",
-      "{'y': 1156, 'index': 3, 'pid': 2269}\n",
-      "{'y': 169, 'index': 4, 'pid': 2294}\n",
-      "{'y': 3025, 'index': 5, 'pid': 2320}\n",
-      "{'y': 5329, 'index': 6, 'pid': 2345}\n",
-      "{'y': 441, 'index': 7, 'pid': 2370}\n",
-      "{'y': 324, 'index': 8, 'pid': 2395}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'x': 10, 'y': 100, 'index': 0, 'pid': 40493},\n",
+       " {'x': 11, 'y': 121, 'index': 1, 'pid': 40539},\n",
+       " {'x': 23, 'y': 529, 'index': 2, 'pid': 40572},\n",
+       " {'x': 34, 'y': 1156, 'index': 3, 'pid': 40602},\n",
+       " {'x': 13, 'y': 169, 'index': 4, 'pid': 40636},\n",
+       " {'x': 55, 'y': 3025, 'index': 5, 'pid': 40668},\n",
+       " {'x': 73, 'y': 5329, 'index': 6, 'pid': 40699},\n",
+       " {'x': 21, 'y': 441, 'index': 7, 'pid': 40737},\n",
+       " {'x': 18, 'y': 324, 'index': 8, 'pid': 40773}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pickle\n",
-    "\n",
-    "for p in baz_output :\n",
-    "    print( pickle.load( open( p['output_pickle'], 'rb' ) ) )\n",
-    "\n",
-    "#print(baz_output)"
+    "baz_output"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "myconda",
    "language": "python",
-   "name": "python3"
+   "name": "myconda"
   },
   "language_info": {
    "codemirror_mode": {
@@ -294,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   },
   "varInspector": {
    "cols": {
